[project]
name = "hku5-agent"
version = "0.1.0"
description = "AI-powered risk assessment tool for HKU5 coronavirus"
authors = [{ name = "Aunova", email = "your.email@example.com" }]
dependencies = ["smolagents[litellm]>=0.1.0", "python-dotenv>=1.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.rye]
managed = true
dev-dependencies = ["black>=23.12.1", "ruff>=0.1.9", "mypy>=1.8.0"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
